styles/home.css
@import 'variables.css';
/* @require 'partials/share-sheet.css' */

a {
	color: var(--text-color);
	
	@media (hover) {
	&:hover {
		color: var(--blue);
	}
	
	&:active {
		color: var(--darkblue);
	}
	}
}

@keyframes pop-in {
	0% {
		transform: translateY(50px) rotate(-270deg);
		opacity: 0;
	}
	75% {
		transform: translateY(-15px) rotate(-90deg);
		opacity: 0.25;
	}
	100% {
		transform: translateY(0) rotate(0deg);
		opacity: 1;
	}
}

.headerpic {
	margin: 7.5% auto 3.5%;
}

.headerpic,
.headerpic img {
	transition: width 0.5s ease-out, height 0.5s ease-out, background-size 0.5s ease-out;
	display: block;
	width: 10em;
	height: 10em;
	border-radius: 50%;
	background-image: url('/images/ScottPic_600.jpg?03-2014');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: 100%;
}

.fourohfour .headerpic,
.fourohfour .headerpic img {
	background: none;
}

.sexy .headerpic {
	background-image: url('/images/SexyScott.jpg?03-2015');
}

.info {
	text-align: center;
}

.name {
	transition: font-size 0.5s ease;
	font-size: 2em;
	font-weight: 500;
	line-height: 1;
	color: var(--text-color);
	margin: 1.5% auto;
}

nav {
	transition: font-size 0.5s ease;
	display: inline-block;
	font-size: 1.25em;
	padding: 0 1.5% 1%;
	border-bottom: 1px solid var(--blue);
	margin: 1% auto;
}

nav a {
	display: inline;
	margin: 0 0.25em;
}

.MainText {
	transition: font-size 0.5s ease;
	width: 92.5%;
	max-width: 25em;
	font-size: 1em;
	line-height: 1.25;
	color: var(--text-color);
	margin: 1.5% auto;
}

.AllSocialLinks {
	display: flex;
	justify-content: space-around; /* Prevents Chrome bug from incorrectly calculating justify-content: center */
	list-style: none;
	margin: 2.5% auto 1.5%;
}

.no-flexbox .AllSocialLinks {
	text-align: center;
}

.SocialLink {
	animation: pop-in 0.5s linear forwards;
	opacity: 0;
	
	.no-cssanimations & {
		opacity: 1;
	}
}

.SocialLink:nth-of-type(1),
.SocialLink:nth-of-type(2) {
	animation-delay: none;
}
.SocialLink:nth-of-type(3),
.SocialLink:nth-of-type(4), {
	animation-delay: 0.15s;
}
.SocialLink:nth-of-type(5) {
	animation-delay: 0.3s;
}
.SocialLink:nth-of-type(6) {
	animation-delay: 0.45s;
}
.SocialLink:nth-of-type(7) {
	animation-delay: 0.6s;
}
.SocialLink:nth-of-type(8),
.SocialLink:nth-of-type(9) {
	animation-delay: 0.75s;
}
.SocialLink:nth-of-type(10) {
	animation-delay: 0.9s;
}

.no-flexbox .SocialLink {
	display: inline;
	text-align: center;
	margin: 0 0.75em;
}

.SocialLink.ShareSheet,
.SocialLink.Desktop {
	display: none;
}

.iOS .SocialLink.ShareSheet {
	display: inline;
}

.iOS .SocialLink.notShareSheet {
	display: none;
}

.SocialIcon {
	transition: opacity 0.25s ease-out, height 0.5s ease, width 0.5s ease, transform 0.25s ease-out;
	transform: scale(1);
	width: 1em;
	height: 1em;
	font-size: 2.25em;
	vertical-align: middle;
	cursor: pointer;
	
	@media (hover) {
	&:active {
		opacity: 0.5;
	}
	}
}

.SocialLink.touched .SocialIcon {
	opacity: 0.5;
}


/* Tablet */
@media (min-width: 35em) {
	.headerpic,
	.headerpic img {
		width: 14em;
		height: 14em;
	}

	.info {
		font-size: 1.15em;
	}

	.AllSocialLinks {
		justify-content: center;
	}
	
	.SocialLink {
		margin: 0 0.5em;
	}

	.SocialIcon {
		font-size: 3em;
	}
}

@media (hover) and (min-width: 35em) {
.SocialIcon {
	transform: scale(0.85);
	font-size: 3.25em;
	
	&:hover {
		transform: scale(1);
	}
}
}


/* Desktop */
@media (min-width: 50em) {
	.headerpic {
		margin-top: 2.5%;
	}
	
	.info {
		font-size: 1.25em;
	}

	.name {
		margin-bottom: 0;
	}

	.MainText {
		width: 60%;
	}

	.SocialLink.Desktop {
		display: inline;
	}

	.SocialLink.Mobile {
		display: none;
	}

	.SocialIcon {
		font-size: 3.5em;
	}
}


/* Large Screen */
@media (min-width: 68.5em) {
	.info {
		font-size: 1.35em;
	}

	.MainText {
		width: 70%;
		margin: 0.5% auto;
	}

	.SocialIcon {
		font-size: 3.65em;
	}
}

